Fixed an issue with unnecessary scroll bars being visible in some browsers

--- a/src/Chat.module.scss
+++ b/src/Chat.module.scss
@@ -11,10 +11,11 @@
 
 .chatContainer {
     max-height: 75vh;
-    overflow: scroll;
+    overflow-y: scroll;
 
     @include media-breakpoint-up(md) {
         max-height: none;
+        overflow-y: auto;
     }
 }
 
