--- a/src/Message.module.scss
+++ b/src/Message.module.scss
@@ -2,10 +2,11 @@
 
 .messageContainer {
     max-height: 75vh;
-    overflow: scroll;
+    overflow-y: scroll;
 
     @include media-breakpoint-up(md) {
         max-height: none;
+        overflow-y: auto;
     }
 }
 
